--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -2,4 +2,4 @@
 applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
-  host: sg-pal-tracker-review
+  host: nh-pal-tracker-review
