--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -3,3 +3,5 @@ applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
   host: nh-pal-tracker-review
+  services:
+  - tracker-database
